    - Renamed property "localityCorrespondence" to "correspondenceAddress"
    - Fixed capitalization for properties "GAVcompliance" and "GAVname"
    - Added properties "SUVACompany" and "UVGInsurer"
- OfferFixedPayrollsType (Renamed)
    - Renamed to OfferDSBFixedPayrollsType
- OfferNlpiDataType (Changed)
    - Added property "UVGCompulsory"
    - Added properties "totalPremiumBUAndNBU", "netPremiumUVGTotal", "netPremiumTotal",
    "instalmentSurchargePercentageUVGCompulsory", "instalmentSurchargeAmountUVGCompulsory" to "premiumOverview"
    - Changed description of properties "instalmentSurchargePercentage", "instalmentSurchargeAmount" in "premiumOverview"
    - replaced in-file definition of property "offerDocument" with reference to "MultiFileType"
    - replaced in-file definition of property "contractConditionsDocument" with reference to "MultiFileType"
    - property DSB is now optional
    - property "insurerContact" is now mandatory
- OfferNlpiRequestDataType (Changed)
    - Removed keyword "unevaluatedProperties"
    - Added properties "UVGCompulsory", "UVGSupplement" and "document"
    - Changed type of property "brokerContract" to BrokerContactType
    - properties "timestamp", "header", "customer", "borkerContact", "insuranceDurationInYears" are now mandatory
- OfferPersonGroupsType.json (Renamed)
    - Renamed to OfferDSBPersonGroupsType.json
- OfferRequestFixedPayrollsType (Renamed)
    - Renamed to OfferRequestDSBFixedPayrollsType
- OfferRequestPersonGroupsType (Renamed)
    - Renamed to OfferRequestDSBPersonGroupsType
- OfferRequestInsuranceOptionsVariousType (Changed)
    - renamed property "DSBtypePayInstalment" to "typePayInstalment"
    - properties "premiumRateGuaranty", "renunciationTerminationRightClaim", "annualCancellation", "typePayInstalment" are now mandatory
- OfferRequestUVGOFixedPayrollsType (Added)
- OfferRequestUVGOPersonGroupsType (Added)
- OfferRequestUVGOType (Added)
- OfferRequestUVGZFixedPayrollsType (Added)