@@ -55,6 +55,9 @@
 		"UVGCompulsory": {
 			"$ref": "../offer-nlpi-types/OfferUVGOType.json"
 		},
+		"UVGSupplement": {
+			"$ref": "../offer-nlpi-types/OfferUVGZType.json"
+		},
 		"premiumOverview": {
 			"description": "Overview of premiums for the entire offer (incl. all insured groups of persons and fixed payroll amounts)",
 			"type": "object",
@@ -75,6 +78,11 @@
 				},
 				"netPremiumUVGTotal": {
 					"description": "The total net premium UVG corresponds to the amount of the net premium total offered for UVG coverage after deduction of any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
+					"type": "number",
+					"multipleOf": 0.01
+				},
+				"netPremiumUVGZTotal": {
+					"description": "The total net premium UVG-Z corresponds to the amount of the net premium total offered for UVG-Z coverage after deduction of any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
 					"type": "number",
 					"multipleOf": 0.01
 				},
