@@ -1,0 +1,21 @@
+{
+	"$schema": "https://json-schema.org/draft/2019-09/schema",
+	"type": "object",
+	"description": "UVG Compulsory. Federal Accident Insurance Act (UVG)",
+	"properties": {
+		"persongroup": {
+			"$ref": "OfferUVGZPersonGroupsType.json"
+		},
+		"fixedPayrolls": {
+			"$ref": "OfferUVGZFixedPayrollsType.json"
+		},
+		"insuranceOptionsVarious": {
+			"$ref": "OfferInsuranceOptionsVariousType.json"
+		}
+	},
+	"additionalProperties": false,
+	"required": [
+		"insuranceOptionsVarious",
+		"persongroup"
+	]
+}
